RESOLVED FIXED187156
REGRESSION (233281): fast/dom/location-new-window-no-crash.html and some other tests are timing out
https://bugs.webkit.org/show_bug.cgi?id=187156
Summary REGRESSION (233281): fast/dom/location-new-window-no-crash.html and some othe...
Antti Koivisto
Reported 2018-06-28 14:22:28 PDT
Tests Timeout: fast/dom/location-new-window-no-crash.html http/tests/security/javascriptURL/xss-ALLOWED-from-javascript-url-window-open.html storage/indexeddb/modern/blob-cursor.html storage/indexeddb/modern/blob-svg-image.html
Attachments
patch (2.40 KB, patch)
2018-06-28 14:27 PDT, Antti Koivisto
no flags
patch (2.41 KB, patch)
2018-06-28 14:31 PDT, Antti Koivisto
zalan: review+
patch (2.52 KB, patch)
2018-06-28 14:59 PDT, Antti Koivisto
no flags
Archive of layout-test-results from ews204 for win-future (12.81 MB, application/zip)
2018-06-28 16:41 PDT, EWS Watchlist
no flags
Antti Koivisto
Comment 1 2018-06-28 14:27:26 PDT
EWS Watchlist
Comment 2 2018-06-28 14:29:39 PDT
Attachment 343852 [details] did not pass style-queue: ERROR: Source/WebCore/style/StyleTreeResolver.cpp:582: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/style/StyleTreeResolver.cpp:584: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 3 2018-06-28 14:31:41 PDT
EWS Watchlist
Comment 4 2018-06-28 14:34:03 PDT
Attachment 343854 [details] did not pass style-queue: ERROR: Source/WebCore/style/StyleTreeResolver.cpp:582: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/style/StyleTreeResolver.cpp:584: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 5 2018-06-28 14:59:41 PDT
EWS Watchlist
Comment 6 2018-06-28 16:41:42 PDT
Comment on attachment 343856 [details] patch Attachment 343856 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/8375321 New failing tests: http/tests/security/contentSecurityPolicy/userAgentShadowDOM/allow-video.html
EWS Watchlist
Comment 7 2018-06-28 16:41:54 PDT
Created attachment 343870 [details] Archive of layout-test-results from ews204 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews204 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Ryan Haddad
Comment 8 2018-06-28 16:43:16 PDT
(In reply to Build Bot from comment #6) > Comment on attachment 343856 [details] > patch > > Attachment 343856 [details] did not pass win-ews (win): > Output: https://webkit-queues.webkit.org/results/8375321 > > New failing tests: > http/tests/security/contentSecurityPolicy/userAgentShadowDOM/allow-video.html Looks unrelated to this patch.
WebKit Commit Bot
Comment 9 2018-06-28 16:58:03 PDT
Comment on attachment 343856 [details] patch Clearing flags on attachment: 343856 Committed r233341: <https://trac.webkit.org/changeset/233341>
WebKit Commit Bot
Comment 10 2018-06-28 16:58:04 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11 2018-06-28 17:00:07 PDT
Darin Adler
Comment 12 2018-06-29 17:36:25 PDT
Comment on attachment 343856 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=343856&action=review > Source/WebCore/style/StyleTreeResolver.cpp:633 > + for (size_t i = 0; i < queue.size(); ++i) { > + if (auto* page = queue[i]->page()) > + page->setMemoryCacheClientCallsEnabled(true); > + } Why not a modern for loop?
Note You need to log in before you can comment on or make changes to this bug.