REGRESSION (233281): fast/dom/location-new-window-no-crash.html and some other tests are timing out https://bugs.webkit.org/show_bug.cgi?id=187156

Reviewed by Zalan Bujtas.

We need still need to re-enable memory cache client calls even when not doing other post-resolution callbacks.

* style/StyleTreeResolver.cpp:
(WebCore::Style::memoryCacheClientCallsResumeQueue):

Add a separate queue for this.

(WebCore::Style::suspendMemoryCacheClientCalls):
(WebCore::Style::PostResolutionCallbackDisabler::~PostResolutionCallbackDisabler):


Canonical link: https://commits.webkit.org/202426@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233341 268f45cc-cd09-0410-ab3c-d52691b4dbfc